--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Cardano NFT Book Rental DApp</title>
-	<script src="https://unpkg.com/lucid-cardano@0.10.7/web-bundle/index.es.js"></script>
 </head>
 <body>
 	<h1>Rent a Book NFT on Cardano Preprod</h1>
@@ -22,8 +21,10 @@
 	<button id="rentButton" disabled>Rent Book</button>
 	<p id="txStatus"></p>
 
-	<script>
-		const scriptAddress = 'your_script_address_here'; // Replace with aiken blueprint address renting_escrow.nft_rental output
+	<script type="module">
+		import { Lucid, Maestro } from "https://unpkg.com/lucid-cardano@0.10.7/web-bundle/index.es.js";
+
+		const scriptAddress = 'addr_test1wzvnyvs6at8sk56yvca400cjchzeeh3h5ednq5grczv2jag04uv5c'; // Replace with aiken blueprint address renting_escrow.nft_rental output
 		const scriptHash = '9932321aeacf0b5344663b57bf12c5c59cde37a65b305103c098a975'; // From plutus.json
 		const maestroApiKey = '5LIjakGH6bZmybwAsG0kUOvrTbnoe2wK'; // Get from https://gomaestro.org/
 		let lucid;
