--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Cardano NFT Book Rental DApp</title>
 </head>
 <body>
-	<h1>Rent a Book NFT on Cardano Preprod</h1>
+	<h1>Rent a Book NFT on Cardano Preprod 2</h1>
 	<p>Connect your Eternl wallet on Preprod network.</p>
 	
 	<button id="connectWallet">Connect Eternl Wallet</button>
