--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<p id="txStatus"></p>
 
 	<script type="module">
-		import lucidCardano from 'https://cdn.jsdelivr.net/npm/lucid-cardano@0.10.11/+esm';
+		import { Lucid, Maestro } from "https://deno.land/x/lucid/mod.ts";
 
 		const scriptAddress = 'addr_test1wzvnyvs6at8sk56yvca400cjchzeeh3h5ednq5grczv2jag04uv5c'; // Replace with aiken blueprint address renting_escrow.nft_rental output
 		const scriptHash = '9932321aeacf0b5344663b57bf12c5c59cde37a65b305103c098a975'; // From plutus.json
