--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Cardano NFT Book Rental DApp</title>
 </head>
 <body>
-	<h1>Rent a Book NFT on Cardano Preprod 2</h1>
+	<h1>Rent a Book NFT on Cardano Preprod</h1>
 	<p>Connect your Eternl wallet on Preprod network.</p>
 	
 	<button id="connectWallet">Connect Eternl Wallet</button>
@@ -19,7 +19,7 @@
 	<p id="txStatus"></p>
 
 	<script type="module">
-		import { Lucid, Maestro } from "./lucid-cardano";
+		import { Lucid, Maestro } from "https://unpkg.com/lucid-cardano@0.10.7/web/mod.js";
 
 		const scriptAddress = 'addr_test1wzvnyvs6at8sk56yvca400cjchzeeh3h5ednq5grczv2jag04uv5c'; // Replace with aiken blueprint address renting_escrow.nft_rental output
 		const scriptHash = '9932321aeacf0b5344663b57bf12c5c59cde37a65b305103c098a975'; // From plutus.json
